--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
 <!-- Section Accueil avec diaporama -->
 <section id="accueil">
   <!-- Diaporama -->
-  <div class="slide active" style="background-image: url('images/fond1.JPEG');"></div>
+  <div class="slide active" style="background-image: url('images/fond1.jpeg');"></div>
   <div class="slide" style="background-image: url('images/fond2.jpg');"></div>
   <div class="slide" style="background-image: url('images/fond3.jpg');"></div>
   <div class="slide" style="background-image: url('images/fond4.jpg');"></div>
