--- a/decouverte-3d-vr.html
+++ b/decouverte-3d-vr.html
@@ -133,6 +133,13 @@
   S'inscrire
 </a>
   </section>
+  
+ <!-- Bouton flottant retour avec texte -->
+<a href="index.html" title="Retour à l'accueil"
+   class="fixed bottom-6 right-6 bg-orange-500 hover:bg-orange-600 text-white px-5 py-3 rounded-full shadow-lg flex items-center gap-2 transition duration-300 z-50">
+  <i data-feather="arrow-left" class="w-5 h-5"></i>
+  <span class="font-semibold">Retour à l’accueil</span>
+</a>
 
   <!-- Footer -->
   <footer class="text-center text-sm text-gray-400 py-8">
