--- a/decouverte-3d-vr.html
+++ b/decouverte-3d-vr.html
@@ -93,8 +93,8 @@
           Enfilez un casque et découvrez des univers immersifs en 3D : pédagogie, exploration, interaction et jeu.
         </p>
         <ul class="space-y-2 text-gray-100 list-disc list-inside">
-          <li>Casques Oculus Quest 2</li>
-          <li>Applications éducatives & artistiques</li>
+          <li>Casques Meta Quest 2</li>
+          <li>jeu en réalité virtuel</li>
           <li>Exploration libre à 360°</li>
         </ul>
       </div>
@@ -119,9 +119,8 @@
   <section class="py-16 px-6 fade-in">
     <div class="max-w-3xl mx-auto text-center">
       <blockquote class="italic text-xl text-gray-300">
-        “Une expérience incroyable ! J’ai créé mon premier porte-clés en 3D et visité un musée virtuel. Ludique et formateur.”
+        “Une expérience incroyable ! J’ai créé des médiaille en 3D pour les gagnant du kahoot!.”
       </blockquote>
-      <div class="mt-4 text-orange-400 font-semibold text-lg">– Léa, participante 2024</div>
     </div>
   </section>
 
